# router/cargoRouter.go
@@ -11,6 +11,6 @@ func cargoRouter(r *gin.RouterGroup, db *gorm.DB) {
 	r.POST("cargo_kind", a.AddCargoKind())
 	r.GET("cargo_kind/:ck_id", a.GetCargoKind())
 	r.PUT("cargo_kind", a.UpdateCargoKind())
-	r.DELETE("cargo_kind/:id", a.DeleteCargoKind())
+	r.DELETE("cargo_kind/:ck_id", a.DeleteCargoKind())
 	r.GET("cargo_kind/_search", a.SearchCargoKind())
 }
